syntax = "proto3";

package example.potato;

option go_package = "github.com/grpc-example-gateway/proto/go/potato";

import "google/protobuf/empty.proto";

message Potato {
  string id = 1;
  string name = 2;
  int32 size = 3;
}

message AddPotatoRequest {
  Potato potato = 1;
}

message AddPotatoResponse {
  Potato potato = 1;
}

message GetPotatoRequest {
  string potato_id = 1;
}

message GetPotatoResponse {
  Potato potato = 1;
}

message GetPotatoesRequest {
  // The field to order the results by.
  string order_by = 1;

  // The maximum number of potatoes to return. The service may return fewer than
  // this value.
  // If unspecified, at most XX potatoes will be returned.
  // The maximum value is XXX; values above XXX will be coerced to XXX.
  int32 page_size = 2;

  // A page token, received from a previous `GetPotatoes` call.
  // Provide this to retrieve the subsequent page.
  //
  // When paginating, all other parameters provided to `GetPotatoes` must match
  // the call that provided the page token.
  string page_token = 3;
}

message GetPotatoesResponse {
  repeated Potato potatoes = 1;

  // A token, which can be sent as `page_token` to retrieve the next page.
  // If this field is omitted, there are no subsequent pages.
  string next_page_token = 2;
}

message UpdatePotatoRequest {
  Potato potato = 1;
}

message UpdatePotatoResponse {
  Potato potato = 1;
}

message DeletePotatoRequest {
  string potato_id = 1;
}

service PotatoService {
  rpc AddPotato(AddPotatoRequest) returns (AddPotatoResponse) {}
  rpc GetPotato(GetPotatoRequest) returns (GetPotatoResponse) {}
  rpc GetPotatoes(GetPotatoesRequest) returns (GetPotatoesResponse) {}
  rpc UpdatePotato(UpdatePotatoRequest) returns (UpdatePotatoResponse) {}
  rpc DeletePotato(DeletePotatoRequest) returns (google.protobuf.Empty) {}
}
